<resources>
    <string name="app_name">Stock Broker App</string>
    <string name="btn_click">Click here!</string>
    <string name="search">Search</string>
    <string name="stock_item_name_placeholder">Some Text here</string>
    <string name="stock_item_currency_placeholder">GBP</string>
    <string name="stock_item_price_placeholder">21.99</string>
    <string name="stock_details_head">Stock Details</string>
    <string name="stock_item_currency_placeholder_label">Price listed currency:</string>
    <string name="stock_item_price_placeholder_label">Price of stock:</string>
    <string name="buy_share_button">Buy Share</string>
    <string name="number_of_available_shares_placeholder_label">No. of shares with you:</string>
    <string name="number_of_available_shares_placeholder">0</string>
    <string name="auto_convert_button">Convert Currency</string>
    <string name="select_currency_conversion_placeholder_label">Convert currency to:</string>
    <string name="select_currency_conversion_placeholder">GBP</string>
    <string name="list_my_shares">My Shares</string>
    <string name="currency_rate_placeholder_label">Rate:</string>
    <string name="currency_rate_placeholder">1</string>
    <string name="my_stocks_page_header">My Stocks List</string>
    <string name="my_stock_symbol_label">Stock Symbol: </string>
    <string name="my_stock_symbol">Symbol here</string>
    <string name="my_stock_price_label">Stock Price: </string>
    <string name="my_stock_currency_label">Stock Currency: </string>
    <string name="my_stock_available_shares_label">Shares you own: </string>
    <string name="my_stock_total_price_label">Total: </string>
    <string name="my_stock_sell_share_button">Click to Sell Shares</string>
    <string name="go_home">Home</string>
    <string name="price_low_to_high">Price - Low to High</string>
    <string name="price_high_to_low">Price - High to Low</string>
    <string name="shares_low_to_high">Shares - Low to High</string>
    <string name="shares_high_to_low">Shares - High to Low</string>
    <string name="a_to_z">A to Z</string>
    <string name="z_to_a">Z to A</string>
</resources>