<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/off_white"
    tools:context=".pages.StockDetailPage">

    <RelativeLayout
        android:id="@+id/stockDetailsHighlightBar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@drawable/highlight_bar">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_back_white"
            android:background="@android:color/transparent"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"/>

        <TextView
            android:id="@+id/bookDetailsHead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/stock_details_head"
            android:textColor="@color/off_white"
            android:fontFamily="@font/poppins"
            android:textSize="24sp"
            android:textStyle="bold"/>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/buyShareButton"
        android:layout_below="@+id/stockDetailsHighlightBar"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/off_white"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/stockDetailsSymbol"
                    style="@style/TextAppearance.MaterialComponents.Headline4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:text="@string/stock_item_name_placeholder"
                    android:textAlignment="center"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/stockDetailsName"
                    style="@style/TextAppearance.MaterialComponents.Headline5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/stockDetailsSymbol"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/stock_item_name_placeholder"
                    android:textAlignment="center"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/stockDetailsCurrencyLabel"
                    style="@style/TextAppearance.MaterialComponents.Headline6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/stockDetailsName"
                    android:layout_marginTop="50dp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/stock_item_currency_placeholder_label"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/stockDetailsCurrency"
                    style="@style/TextAppearance.MaterialComponents.Headline6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/stockDetailsName"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="50dp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/stock_item_currency_placeholder"
                    android:textAlignment="center"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/stockDetailsPriceLabel"
                    style="@style/TextAppearance.MaterialComponents.Headline6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/stockDetailsCurrencyLabel"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/stock_item_price_placeholder_label"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/stockDetailsPrice"
                    style="@style/TextAppearance.MaterialComponents.Headline6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/stockDetailsCurrency"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/stock_item_price_placeholder"
                    android:textAlignment="center"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/stockDetailsAvailableSharesLabel"
                    style="@style/TextAppearance.MaterialComponents.Headline6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/stockDetailsPriceLabel"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/number_of_available_shares_placeholder_label"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/stockDetailsAvailableShares"
                    style="@style/TextAppearance.MaterialComponents.Headline6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/stockDetailsPrice"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/number_of_available_shares_placeholder"
                    android:textAlignment="center"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/stockDetailsCurrencyConvertLabel"
                    style="@style/TextAppearance.MaterialComponents.Headline6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/stockDetailsAvailableSharesLabel"
                    android:layout_marginTop="100dp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/select_currency_conversion_placeholder_label"
                    android:textAlignment="center"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/stockDetailsCurrencyConvert"
                    style="@style/TextAppearance.MaterialComponents.Headline6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/stockDetailsAvailableShares"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="100dp"
                    android:drawableEnd="@drawable/arrow_drop_down_purple"
                    android:drawablePadding="10dp"
                    android:fontFamily="@font/poppins"
                    android:gravity="center"
                    android:text="@string/select_currency_conversion_placeholder"
                    android:textAlignment="center"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/stockDetailsCurrencyRateLabel"
                    style="@style/TextAppearance.MaterialComponents.Headline6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/stockDetailsCurrencyConvertLabel"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/currency_rate_placeholder_label"
                    android:textAlignment="center"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/stockDetailsCurrencyRate"
                    style="@style/TextAppearance.MaterialComponents.Headline6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/stockDetailsCurrencyConvert"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/poppins"
                    android:gravity="center"
                    android:text="@string/currency_rate_placeholder"
                    android:textAlignment="center"
                    android:textColor="@color/black" />

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buyShareButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/stockDetailsOptionsLinearLayout"
        android:background="@color/purple_custom"
        android:fontFamily="@font/poppins"
        android:text="@string/buy_share_button"
        android:textAlignment="center"
        android:textColor="@color/off_white"
        android:textSize="24sp" />

    <LinearLayout
        android:id="@+id/stockDetailsOptionsLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/autoConvertCurrencyButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/currency_exchange_white"
            android:text="@string/auto_convert_button"
            android:textColor="@color/off_white"
            android:background="@color/purple_custom"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/listMySharesButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/list_white"
            android:text="@string/list_my_shares"
            android:textColor="@color/off_white"
            android:background="@color/purple_custom"/>

    </LinearLayout>

</RelativeLayout>